# FEITIAN_MOBILE_READERS

./: .gitignore  Readme.txt
Android SDK/: README  Readme.txt
Android SDK/Lib/jni/: Android.mk  com_example_ftreadertest_Tpcsc.h
Android SDK/Samples/: .project
Android SDK/Samples code by eclipse/: AndroidManifest.xml
Android SDK/Samples code by eclipse/jni/: Android.mk  com_example_ftReaderStandard_Tpcsc.h
Android SDK/Samples/jni/: Android.mk  FTReaderTest.cpp  com_example_ftreadertest_Tpcsc.h
Android SDK/bR301_BT_3.0/: Readme.txt
Android SDK/old_android_sdk/Samples code by eclipse/: .project  AndroidManifest.xml
Android_SDK/: README
Android_SDK/2.0.1.6/demo code/: build.gradle
Android_SDK/2.0.1.7/demo code/: build.gradle  proguard-rules.pro
Android_SDK/new_android_sdk/Demo code/: local.properties  (+1 more)
Android_SDK/new_android_sdk/Demo code/pcscdemo/src/main/cpp/: CMakeLists.txt  impJni.cpp
Android_SDK/new_android_sdk/Demo code/pcscdemo/src/main/cpp/winscard/: winscard.h  wintypes.h
Android_SDK/new_android_sdk/PCSC_API/Demo code/pcscdemo/src/main/cpp/: CMakeLists.txt  impJni.cpp
Xamarin_Combo/CardReader_Xamarin/: CardReader_Xamarin.sln
iOS SDK/: Readme.txt
iOS SDK/bR301BLE_AND_bR500/: Info.plist
iOS SDK/iR301_AND_bR301/: Info.plist
iOS SDK/iReader/: Readme.txt
iOS SDK/iReader for Appstore/: Readme.txt
iOS SDK/iReader_Basic/: Readme.txt
iOS_SDK/: Readme.txt
iOS_SDK/IPA/: PCSCTestFTReader.ipa  iReader.ipa
iOS_SDK_ForApplePrimitiveCCID/: Readme.txt
iOS_SDK_ForApplePrimitiveCCID/iOS_SDK_ForApplePrimitiveCCID/: Readme.txt
(+772 files in other folders)
